Fixed Facebook button overlay clipping.

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/spit/sass/_sections.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/spit/sass/_sections.sass
@@ -44,7 +44,6 @@
   background-position: center center
   @include background-size(cover)
   padding: 1% 2%
-  overflow: hidden
 
   .logo-campaign
     margin: 0 auto
